# tilebg-py

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
resources/: generate.sh  render.sh  style.css
src/tilebg/: __init__.py  __main__.py  functools.py  gosper.py  grid.py  koch.py  minkowski.py  path.py  svg.py
src/tilebg/patterns/: __init__.py  gosperflakes2.py  hexagons.py  kochflakes3.py  minkowskiflakes4.py
tests/: grid_test.py  path_test.py  svg_test.py
